@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/gtklick
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Dec 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  -gtklick-0.6.4.ebuild, gtklick-0.6.4-r1.ebuild:
+  remove old 0.6.4 ebuild
+  remove python2_7 from PYTHON_COMPAT
+  stabilize 0.6.4-r1 for amd64
 
 *gtklick-0.6.4-r1 (25 Nov 2013)
 
